# AT_TUTORING_SKILLS

./: .gitignore  .pre-commit-config.yaml  at_krl_editor.sqlite3  data.json  db.sqlite3  db_export.json  generated_tasks.json  generated_tasks_sm.json  kb_tasks_demo.json  manage.py  package-lock.json  pyproject.toml
ATskills/: admin.py  apps.py  data_import.py  models.py  serializers.py  urls.py  views.py
ATskills/migrations/: 0001_initial.py  0002_alter_reaction_id_alter_scenariopart_id_and_more.py
at_tutoring_skills/: __main__.py  apps.py
at_tutoring_skills/absolute/: django_init.py
at_tutoring_skills/apps/mistakes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
at_tutoring_skills/apps/mistakes/migrations/: 0001_initial.py  0002_alter_mistake_mistake_type.py  0002_mistakeconnection.py  0003_mistake_skills.py  (+2 more)
at_tutoring_skills/apps/skills/: admin.py  apps.py  dto.py  filters.py  graph.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
at_tutoring_skills/base_server/: asgi.py  autoschema.py  settings.py  urls.py
at_tutoring_skills/core/: IMskills.py  KBskills.py  api_client.py  arguments.py  copmarison.py  data_serializers.py  errors.py  estimation.py  schema.xml  skills.py  tmp.py
at_tutoring_skills/core/errors/: consts.py  context.py  conversions.py  models.py
at_tutoring_skills/core/knowledge_base/: errors.py
at_tutoring_skills/core/models/: models.py
at_tutoring_skills/core/simulation_model/: errors.py
at_tutoring_skills/core/task/: competence_service.py  descriptions.py  service.py  skill_service.py  transitions.py
at_tutoring_skills/utils/: settings.py
mistakes/: apps.py  models.py
mistakes/migrations/: 0001_initial.py
skills_data/: asgi.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
skills_data/ATskills/: admin.py  apps.py  data_import.py  models.py
skills_data/mistakes/: apps.py  models.py
skills_data/skills_data/: asgi.py  settings.py  urls.py
(+104 files in other folders)
