[tool.poetry]
name = "at-tutoring-skills"
version = "0.1.dev0"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
at-krl = {git = "https://github.com/grigandal625/AT_KRL.git", rev = "master"}
django = "^5.1.4"
uvicorn = "^0.34.0"
adrf = {git = "https://github.com/grigandal625/adrf.git", rev = "main"}
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
whitenoise = "^6.9.0"
graphviz = "^0.20.3"
python-dotenv = "^1.1.0"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.7.0"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
django-filter = "^25.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
